<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="estefania.com.cxpress.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_perfil"
        android:name="estefania.com.cxpress.ui.perfil.PerfilFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="estefania.com.cxpress.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="estefania.com.cxpress.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_editar"
        android:name="estefania.com.cxpress.ui.editarPerfil.EditarPerfilFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_editar_perfil" />




</navigation>